# webots-grpc

./: .env.ci.example  .gitattributes  .gitignore  .taplo.toml  CMakeLists.txt  README.md  conanfile.py  inverse_kinematics.py  picker_cntrl_gateway.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: conan-upload.yml  conan_deps.yml  gh-page-doxygen-publish.yml  pr-unit-tests.yml  release.yml
descriptions/simple_picker/: README.md
descriptions/simple_picker/urdf/: picker.urdf  picker_fine.urdf
descriptions/simple_picker/urdf/meshes/: elec_box.dae  link1.dae  link2.dae  link3_1.dae  link3_2.dae
protos/: README.md  device.proto  motor.proto  position_sensor.proto  robot.proto  sensor.proto
src/: CMakeLists.txt  motor_client.cpp  motor_client.hpp  position_sensor_client.hpp  robot_client.cpp  robot_client.hpp  webots-grpc-client.cpp  webots-grpc-client.hpp
src/tests/: CMakeLists.txt  test_api.cpp  test_webots_grpc_client.cpp
test_package/: CMakeLists.txt
test_package/src/: example.cpp
tests/: README.md  client.py  test_api.py  test_find_webots_install_path_unix.py  test_find_webots_install_path_windows.py
tests/worlds/: linear_motor.wbt
webots_grpc/: __main__.py  device_service.py  distance_sensor_service.py  motor_service.py  position_sensor_service.py  robot_service.py  server.py  util.py
