[tool.poetry]
authors     = ["insleker <bkinnightskytw@gmail.com>"]
description = ""
name        = "webots-grpc"
readme      = "README.md"
version     = "0.1.0"

[tool.poetry.dependencies]
grpcio            = "^1.71.0"
grpcio-reflection = "^1.0.0"
ikpy              = "^3.4.2"
opencv-python     = "^4.10.0.84"
paho-mqtt         = "^2.1.0"
pyside6           = "^6.8.0,<6.9.0"
python            = ">=3.10,<3.14"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.71.0"
ruff         = "^0.11.5"
urdf2webots  = "^2023.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]

[tool.ruff] # https://docs.astral.sh/ruff/settings/#top-level
exclude     = ["**/migrations/", "**/manage.py"]
line-length = 100

[tool.ruff.lint] # https://docs.astral.sh/ruff/settings/#lint
ignore = [
    "E402", # module level import not at top of file
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.format] # https://docs.astral.sh/ruff/settings/#format
docstring-code-line-length = 100
quote-style                = "double" # 引號風格，雙引號是預設值，這裡只是明示這個設定
