[project]
authors         = [{ name = "insleker", email = "bkinnightskytw@gmail.com" }]
dependencies    = [
    "grpcio>=1.71.0,<2",
    "grpcio-reflection>=1.0.0,<2",
    # Webots doesn't wrap API as package
    # https://github.com/astral-sh/uv/issues/11175
    # "controller",
    # "controller @ file:///${WEBOTS_HOME}/lib/controller/python",
]
description     = ""
name            = "webots-grpc"
readme          = "README.md"
requires-python = ">=3.10,<3.14"
version         = "0.1.2"

# TODO: move to `betterproto`
[dependency-groups]
dev = [
    "grpcio-tools>=1.71.0,<2",
    "nuitka>=2.7.14",
    "protoletariat>=3.3.10",
    "pytest>=8.4.0,<9",
    "pytest-check>=2.5.4,<3",
    "ruff>=0.11.5,<0.12",
    "urdf2webots>=2023.1.0,<2024",
]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.uv]
package = true

# [tool.uv.sources]
# controller = { path = "${WEBOTS_HOME}/lib/controller/python", package = false  }

[tool.ruff]
exclude     = ["**/migrations/", "**/manage.py"]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E402", # module level import not at top of file
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
#https://github.com/astral-sh/ruff/discussions/14812#discussioncomment-11505593

[tool.ruff.format]
docstring-code-line-length = 100
quote-style                = "double" # 引號風格，雙引號是預設值，這裡只是明示這個設定
